--- a/index.html
+++ b/index.html
@@ -268,10 +268,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://voicepath.github.io/Tips-for-Selecting-a-Telecommunications-Service-Provider/">https://voicepath.github.io/Tips-for-Selecting-a-Telecommunications-Service-Provider/</a><br>
+                <a target="_bLank" href="https://voicepath.s3.us-east-005.backblazeb2.com/Tips+for+Selecting+a+Telecommunications+Service+Provider/index.html">https://voicepath.s3.us-east-005.backblazeb2.com/Tips+for+Selecting+a+Telecommunications+Service+Provider/index.html</a><br>
+                <a target="_bLank" href="https://tips-for-selecting-a-telecommuni-git-d651b5-voicepaths-projects.vercel.app/">https://tips-for-selecting-a-telecommuni-git-d651b5-voicepaths-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://lighthearted-macaron-a764dd.netlify.app/">https://lighthearted-macaron-a764dd.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
